--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,24 @@ body {
   color: #4d4d4d;
   background: #fff;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #FF9000; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #dd7d00; 
+}
 
 /* img
 {  
